Added support for endpoint names

--- a/mqtt-addon-core/etc/mqttv5-retained.yaml
+++ b/mqtt-addon-core/etc/mqttv5-retained.yaml
@@ -34,7 +34,7 @@ persistence:
       value: persist
         
 clusters:
-  - enabled: true
+  - name: cluster-default
     
     # Optional pulisherType. Valid values are STICKY, RANDOM, ROUND_ROBIN.
     # If STICKY and primaryServerURI is defined, the client always uses
