Added support for liveEndpointPoolEnabled

--- a/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
+++ b/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
@@ -82,7 +82,9 @@ clusters:
     
     # Connection time to wait in milliseconds. Each client in the cluster waits
     # for this amount of time before they timeout. Timed out clients are moved
-    # to the dead client list.
+    # to the dead client list. This parameter only applies to the connections
+    # created by this cluster. If liveEndpointPoolEnabled is true (default), then
+    # this parameter will not applied to the connections create by other clusters.
     # Default: 5000
     timeToWait: 5000
     
@@ -140,6 +142,11 @@ clusters:
     #    FoS 2: 2 
     # Default: -1
     subscriberCount: -1
+    
+    # By default, HaMqttClient shares MQTT connections across clusters. Set this
+    # parameter to false if this cluster to create its own connections.
+    # Default: true
+    liveEndpointPoolEnabled: true
     
     # Publisher Type. Valid values are STICKY, RANDOM, ROUND_ROBIN, ALL.
     #   STICKY - Use one server for all publications.
