Added support for multiple connection definitions per cluster

--- a/mqtt-addon-core/etc/mqttv5-bridge-publisher.yaml
+++ b/mqtt-addon-core/etc/mqttv5-bridge-publisher.yaml
@@ -4,8 +4,10 @@ clusters:
 
   # Publishes outgoing messages to bridge-publisher-enterprise
   - name: bridge-publisher-edge
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
+          
     bridges:
       # Send outgoing messages to bridge-publisher-enterprise
       out:  
@@ -14,5 +16,6 @@ clusters:
           qos: 0
         
   - name: bridge-publisher-enterprise
-    connection:
-      serverURIs: [tcp://localhost:32001-32003]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:32001-32003]
