--- a/mqtt-addon-core/etc/mqttv5-bridge-subscriber.yaml
+++ b/mqtt-addon-core/etc/mqttv5-bridge-subscriber.yaml
@@ -4,10 +4,9 @@ clusters:
 
   # bridge-subscriber-edge forwards received messages to bridge-subscriber-enterprise
   - name: bridge-subscriber-edge
-    # autoConnect is required unless connection is made by the app 
-    autoConnect: true
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
 
     bridges:
       # Forward incoming messages to bridge-subscriber-enterprise
@@ -18,5 +17,6 @@ clusters:
    
   # bridge-subscriber-enterprise receives messages from bridge-subscriber-edge      
   - name: bridge-subscriber-enterprise
-    connection:
-      serverURIs: [tcp://localhost:32001-32003]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:32001-32003]
