--- a/mqtt-addon-core/etc/mqttv5-endpoints.yaml
+++ b/mqtt-addon-core/etc/mqttv5-endpoints.yaml
@@ -6,5 +6,6 @@ clusters:
       - name: edge-2
         endpoint: tcp://localhost:1884
         topicBase: test/edge-test
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
