--- a/mqtt-addon-core/etc/mqttv5-multi-publishers.yaml
+++ b/mqtt-addon-core/etc/mqttv5-multi-publishers.yaml
@@ -4,9 +4,11 @@ defaultCluster: multi-publishers-01
 clusters:
   - name: multi-publishers-01
     enabled: true
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
   - name: multi-publishers-02
     enabled: true
-    connection:
-      serverURIs: [tcp://localhost:32001-32003]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:32001-32003]
