--- a/mqtt-addon-core/etc/mqttv5-publisher-all.yaml
+++ b/mqtt-addon-core/etc/mqttv5-publisher-all.yaml
@@ -2,5 +2,6 @@ defaultCluster: publisher-all
 clusters:
   - name: publisher-all   
     publisherType: ALL
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
