--- a/mqtt-addon-core/etc/mqttv5-publisher-many.yaml
+++ b/mqtt-addon-core/etc/mqttv5-publisher-many.yaml
@@ -4,5 +4,6 @@ clusters:
   - name: publisher-many
     initialEndpointCount: 3
     publisherType: ROUND_ROBIN
-    connection:
-      serverURIs: [tcp://localhost:1883-1889]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1889]
