--- a/mqtt-addon-core/etc/mqttv5-publisher.yaml
+++ b/mqtt-addon-core/etc/mqttv5-publisher.yaml
@@ -2,5 +2,6 @@ defaultCluster: publisher
 clusters:
   - name: publisher
     publisherType: ROUND_ROBIN
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883,tcp://localhost:1884,tcp://localhost:1885]
