--- a/mqtt-addon-core/etc/mqttv5-retained.yaml
+++ b/mqtt-addon-core/etc/mqttv5-retained.yaml
@@ -42,5 +42,6 @@ clusters:
     # Default: STICKY
     publisherType: ROUND_ROBIN
     
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
