--- a/mqtt-addon-core/etc/mqttv5-subscriber.yaml
+++ b/mqtt-addon-core/etc/mqttv5-subscriber.yaml
@@ -3,5 +3,6 @@ clusters:
   - name: subscriber
     publisherType: STICKY
     primaryServerURI: tcp://localhost:1883
-    connection:
-      serverURIs: [tcp://localhost:1883,tcp://localhost:1884,tcp://localhost:1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883,tcp://localhost:1884,tcp://localhost:1885]
