--- a/mqtt-addon-core/pom.xml
+++ b/mqtt-addon-core/pom.xml
@@ -62,6 +62,23 @@
 			<artifactId>org.eclipse.paho.mqttv5.client</artifactId>
 			<version>${paho.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snake.version}</version>
+			<!--<classifier>android</classifier>-->
+		</dependency>
+		<!--  TLS/SSL support  -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk18on</artifactId>
+			<version>${bouncycastle.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>${bouncycastle.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.netty</groupId>
@@ -130,12 +147,6 @@
 			<version>${log4j2.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>${snake.version}</version>
-			<!--<classifier>android</classifier>-->
-		</dependency>
 	</dependencies>
 
 	<build>
