--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 	<description>padogrid data grid management addons and tools</description>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncodin>UTF-8</project.build.sourceEncodin>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<padogrid.version>${project.version}</padogrid.version>
@@ -46,6 +46,7 @@
 		<log4j2.version>2.19.0</log4j2.version>
 		<paho.version>1.2.5</paho.version>
 		<snake.version>1.23</snake.version>
+		<bouncycastle.version>1.73</bouncycastle.version>
 		<maven.jar.plugin.version>2.4</maven.jar.plugin.version>
 		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
 		<maven.shade.plugin.version>3.2.2</maven.shade.plugin.version>
