--- a/mqtt-addon-core/etc/mqttv5-client.yaml
+++ b/mqtt-addon-core/etc/mqttv5-client.yaml
@@ -5,63 +5,70 @@ probeDelay: 5000
 clusters:
   - name: mycluster
     enabled: true
-    connection:
-      #authData: null
-      #authMethod: null
-      automaticReconnect: false
-      automaticReconnectMaxDelay: 120
-      automaticReconnectMinDelay: 1
-      cleanStart: true
-      connectionTimeout: 30
-      customWebSocketHeaders: null
-      executorServiceTimeout: 1
-      httpsHostnameVerificationEnabled: true
-      keepAliveInterval: 60
-      maxReconnectDelay: 128000
-      maximumPacketSize: null
-      password: null
-      receiveMaximum: null
-      requestProblemInfo: null
-      requestResponseInfo: null
-      sendReasonMessages: false
-      serverURIs: [tcp://localhost:1883,tcp://localhost:1884,tcp://localhost:1885]
-      sessionExpiryInterval: null
-      socketFactory: null
-      sslClientProps: null
-      sslHostnameVerifier: null
-      topicAliasMaximum: null
-      useSubscriptionIdentifiers: true
-      userName: null
-      userProperties: null
-      willDestination: null
-      willMessage: null
-      willMessageProperties:
-        assignedClientIdentifier: null
-        authenticationData: null
-        authenticationMethod: null
-        contentType: null
-        correlationData: null
-        maximumPacketSize: null
-        maximumQoS: null
-        messageExpiryInterval: null
-        payloadFormat: false
-        publishSubscriptionIdentifiers: []
-        reasonString: null
-        receiveMaximum: null
-        requestProblemInfo: null
-        requestResponseInfo: null
-        responseInfo: null
-        responseTopic: null
-        retainAvailable: null
-        serverKeepAlive: null
-        serverReference: null
-        sessionExpiryInterval: null
-        sharedSubscriptionAvailable: null
-        subscribeSubscriptionIdentifier: null
-        subscriptionIdentifiersAvailable: null
-        topicAlias: null
-        topicAliasMaximum: null
-        userProperties: []
-        validProperties: null
-        wildcardSubscriptionsAvailable: null
-        willDelayInterval: null
+    connections:
+      - tls:
+          tlsVersion: tlsv1.2
+          cafile: null
+          certfile: null
+          keyfile: null
+          password: null
+        connection:
+          #authData: null
+          #authMethod: null
+          automaticReconnect: false
+          automaticReconnectMaxDelay: 120
+          automaticReconnectMinDelay: 1
+          cleanStart: true
+          connectionTimeout: 30
+          customWebSocketHeaders: null
+          executorServiceTimeout: 1
+          httpsHostnameVerificationEnabled: true
+          keepAliveInterval: 60
+          maxReconnectDelay: 128000
+          maximumPacketSize: null
+          password: null
+          receiveMaximum: null
+          requestProblemInfo: null
+          requestResponseInfo: null
+          sendReasonMessages: false
+          serverURIs: [tcp://localhost:1883,tcp://localhost:1884,tcp://localhost:1885]
+          sessionExpiryInterval: null
+          #socketFactory: null
+          sslClientProps: null
+          sslHostnameVerifier: null
+          topicAliasMaximum: null
+          useSubscriptionIdentifiers: true
+          userName: null
+          userProperties: null
+          willDestination: null
+          willMessage: null
+          willMessageProperties:
+            assignedClientIdentifier: null
+            authenticationData: null
+            authenticationMethod: null
+            contentType: null
+            correlationData: null
+            maximumPacketSize: null
+            maximumQoS: null
+            messageExpiryInterval: null
+            payloadFormat: false
+            publishSubscriptionIdentifiers: []
+            reasonString: null
+            receiveMaximum: null
+            requestProblemInfo: null
+            requestResponseInfo: null
+            responseInfo: null
+            responseTopic: null
+            retainAvailable: null
+            serverKeepAlive: null
+            serverReference: null
+            sessionExpiryInterval: null
+            sharedSubscriptionAvailable: null
+            subscribeSubscriptionIdentifier: null
+            subscriptionIdentifiersAvailable: null
+            topicAlias: null
+            topicAliasMaximum: null
+            userProperties: []
+            validProperties: null
+            wildcardSubscriptionsAvailable: null
+            willDelayInterval: null
