--- a/mqtt-addon-core/etc/mqttv5-fos.yaml
+++ b/mqtt-addon-core/etc/mqttv5-fos.yaml
@@ -13,16 +13,19 @@ persistence:
 clusters:
   - name: proxy1
     fos: 1
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
   - name: proxy2
     fos: 2
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
   - name: proxy3
     fos: 3
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
   
   # custom1 = proxy1
   - name: custom1
@@ -31,8 +34,9 @@ clusters:
     liveEndpointCount: 2
     # Make subscriptions to 1 of live endpoints
     subscriberCount: 1
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
       
   # custom2 = proxy2
   - name: custom2
@@ -41,8 +45,9 @@ clusters:
     liveEndpointCount: 2
     # Make subscriptions to 2 of live endpoints
     subscriberCount: 2
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
       
    # custom3 = proxy3
   - name: custom3
@@ -51,5 +56,6 @@ clusters:
     liveEndpointCount: 3
     # Make subscriptions to 3 (all) of live endpoints
     subscriberCount: 3
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
