--- a/mqtt-addon-core/etc/mqttv5-multi-subscribers.yaml
+++ b/mqtt-addon-core/etc/mqttv5-multi-subscribers.yaml
@@ -4,9 +4,11 @@ defaultCluster: multi-subscribers-01
 clusters:
   - name: multi-subscribers-01
     enabled: true
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
   - name: multi-subscribers-02
     enabled: true
-    connection:
-      serverURIs: [tcp://localhost:32001-32003]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:32001-32003]
