--- a/mqtt-addon-core/etc/mqttv5-publisher-shared.yaml
+++ b/mqtt-addon-core/etc/mqttv5-publisher-shared.yaml
@@ -2,13 +2,16 @@ defaultCluster: publisher
 clusters:
   - name: publisher
     publisherType: ROUND_ROBIN
-    connection:
-      serverURIs: [tcp://localhost:1883-1885]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883-1885]
   - name: publisher1
     liveEndpointPoolEnabled: true
-    connection:
-      serverURIs: [tcp://localhost:1883]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1883]
   - name: publisher2
     liveEndpointPoolEnabled: false
-    connection:
-      serverURIs: [tcp://localhost:1884]
+    connections:
+      - connection:
+          serverURIs: [tcp://localhost:1884]
