--- a/padogrid-deployment/pom.xml
+++ b/padogrid-deployment/pom.xml
@@ -97,6 +97,17 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>${snake.version}</version>
 		</dependency>
+		<!--  TLS/SSL support  -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk18on</artifactId>
+			<version>${bouncycastle.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>${bouncycastle.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
