--- a/padogrid-all/pom.xml
+++ b/padogrid-all/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.25-SNAPSHOT</version>
+		<version>0.9.25</version>
 	</parent>
 	<artifactId>padogrid-all</artifactId>
 	<packaging>pom</packaging>
