Added Docker support for Mosquitto

--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
@@ -146,6 +146,11 @@ clusters:
     # Default: -1
     subscriberCount: -1
     
+    # By default, HaMqttClient shares MQTT connections across clusters. Set this
+    # parameter to false if this cluster is to create its own connections.
+    # Default: true
+    liveEndpointPoolEnabled: true
+    
     # Publisher Type. Valid values are STICKY, RANDOM, ROUND_ROBIN, ALL.
     #   STICKY - Use one server for all publications.
     #   RANDOM - Randomly select one server from the live list for each publication.
