--- a/padogrid-mqtt/pom.xml
+++ b/padogrid-mqtt/pom.xml
@@ -27,7 +27,7 @@
 	</parent>
 	<artifactId>padogrid-mqtt</artifactId>
 	<packaging>jar</packaging>
-	<name>${arti${project.artifactId}</name>
+	<name>${project.artifactId}</name>
 	<description>PadoGrid MQTT core library</description>
 	<url>http://maven.apache.org</url>
 
@@ -37,10 +37,6 @@
 	</properties>
 
 	<repositories>
-		<repository>
-			<id>confluent</id>
-			<url>https://packages.confluent.io/maven/</url>
-		</repository>
 	</repositories>
 
 	<dependencies>
