--- a/padogrid-mqtt/src/main/resources/mqttv5-client.yaml
+++ b/padogrid-mqtt/src/main/resources/mqttv5-client.yaml
@@ -145,7 +145,7 @@ clusters:
     subscriberCount: -1
     
     # By default, HaMqttClient shares MQTT connections across clusters. Set this
-    # parameter to false if this cluster to create its own connections.
+    # parameter to false if this cluster is to create its own connections.
     # Default: true
     liveEndpointPoolEnabled: true
     
