Tidied up mosquitto docker

--- a/padogrid-deployment/src/main/resources/mosquitto/docker/compose/template-mosquitto-server-docker-compose.yaml
+++ b/padogrid-deployment/src/main/resources/mosquitto/docker/compose/template-mosquitto-server-docker-compose.yaml
@@ -1,7 +1,7 @@
   ${SERVER_NAME}:
     env_file: .env
     environment:
-      - PADOGRID_TOPIC_PREFIX=edge/${SERVER_NAME}
+      - PADOGRID_TOPIC_PREFIX=${CLUSTER_NAME}/${SERVER_NAME}
     image: padogrid/${IMAGE_NAME}:${VERSION}
     hostname: ${SERVER_NAME}
     mem_limit: 1g
