Fixed an uncaught NPE issue in  potentially caused by null clientID

--- a/padogrid-deployment/src/main/resources/mosquitto/docker/compose/simulator.yaml
+++ b/padogrid-deployment/src/main/resources/mosquitto/docker/compose/simulator.yaml
@@ -1,7 +1,7 @@
 equations:
-  - name: sin
+  - name: sine
     formula: y=sin(x)
-    description: sin
+    description: Sine wave
     startTime: -1
     timeInterval: 500
     minBase: -1
@@ -11,7 +11,7 @@ equations:
     calculationFunction: java.lang.Math.sin
   - name: dampedSineWave
     formula: y=2e^(-2x)sin(2*pi*x/.5)
-    description: sin
+    description: Damped sine wave
     startTime: -1
     timeInterval: 500
     minBase: 0
@@ -142,11 +142,11 @@ equations:
 publishers:        
   # MQTT
   - product: mqtt
-    name: sin-publisher
-    equationName: sin
+    name: sine-publisher
+    equationName: sine
     dataStructure:
       type: topic
-      name: ${env:PADOGRID_TOPIC_PREFIX}/sin
+      name: ${env:PADOGRID_TOPIC_PREFIX}/sine
     timeInterval: 500
   - product: mqtt
     name: dampedSineWave-publisher
