Fixed HaMqttClient.getServerURIs() to return correct endpoints

--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
@@ -243,8 +243,8 @@ clusters:
       # tls uses an internal socket factory for SSL connections
       - tls:
           # TLS protocol version. Valid values are TLSv1.1, TLSv1.2, TLSv1.3
-          # Default: tlsv1.2
-          tlsVersion: tlsv1.2
+          # Default: TLSv1.2
+          tlsVersion: TLSv1.2
           # Path to path to a file containing trusted CA certificates to enable encrypted
           # communication.
           cafile: null
