--- a/hazelcast-addon-jet-demo-4/pom.xml
+++ b/hazelcast-addon-jet-demo-4/pom.xml
@@ -25,7 +25,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.26-SNAPSHOT</version>
+		<version>0.9.26</version>
 	</parent>
 	<artifactId>hazelcast-addon-jet-demo-4</artifactId>
 	<name>${project.artifactId}</name>
