--- a/padogrid-tools/pom.xml
+++ b/padogrid-tools/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.26-SNAPSHOT</version>
+		<version>0.9.26</version>
 	</parent>
 	<artifactId>padogrid-tools</artifactId>
 	<packaging>jar</packaging>
