Added support for generic plugins to HaMqttClient

--- a/padogrid-mqtt/pom.xml
+++ b/padogrid-mqtt/pom.xml
@@ -36,8 +36,7 @@
 		<skipTests>true</skipTests>
 	</properties>
 
-	<repositories>
-	</repositories>
+	<repositories></repositories>
 
 	<dependencies>
 
@@ -46,6 +45,7 @@
 			<artifactId>padogrid-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
 		<!-- Paho 3.x -->
 		<dependency>
 			<groupId>org.eclipse.paho</groupId>
@@ -74,59 +74,6 @@
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk18on</artifactId>
 			<version>${bouncycastle.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-resolver-dns-native-macos</artifactId>
-			<version>4.1.78.Final</version>
-			<classifier>osx-x86_64</classifier>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>antlr4-runtime</artifactId>
-			<version>4.7.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>javax.persistence-api</artifactId>
-			<version>2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.4.24.Final</version>
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>com.github.javafaker</groupId>
-			<artifactId>javafaker</artifactId>
-			<version>0.17.2</version>
-		</dependency>
-		-->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.28</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- For domain classes -->
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
