Added maven local repo installation function

--- a/padogrid-mqtt/pom.xml
+++ b/padogrid-mqtt/pom.xml
@@ -20,12 +20,15 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+	<!-- <parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
 		<version>0.9.27-SNAPSHOT</version>
 	</parent>
+	-->
+	<groupId>padogrid.addon</groupId>
 	<artifactId>padogrid-mqtt</artifactId>
+	<version>0.9.27-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<description>PadoGrid MQTT core library</description>
@@ -33,6 +36,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<log4j2.version>2.19.0</log4j2.version>
+		<paho.version>1.2.5</paho.version>
+		<snake.version>1.23</snake.version>
+		<bouncycastle.version>1.73</bouncycastle.version>
 		<skipTests>true</skipTests>
 	</properties>
 
@@ -45,7 +52,7 @@
 			<artifactId>padogrid-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<!-- Paho 3.x -->
 		<dependency>
 			<groupId>org.eclipse.paho</groupId>
@@ -90,6 +97,12 @@
 			<version>${log4j2.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -106,7 +119,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.2</version>
+				<version>3.3.0</version>
+				<configuration>
+					<excludes>
+						<exclude>**/META-INF/maven/*</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
